# qtgsettings

./: .qmake.conf  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake  qtgsettings.pro  qtgsettings.qbs  sync.profile
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.travis/: PKGBUILD.in  bintray-wrapper.sh  bintray.json.in  build.sh  deploy.sh  github_deploy_key_liri_ci.enc
cmake/: FindGIO.cmake
src/: deployment.qbs  src.pro
src/gsettings/: CMakeLists.txt  gsettings.pro  gsettings.qbs  logging.h  logging_p.h  qgsettings.cpp  qgsettings.h  qgvariantutils.cpp  qgvariantutils_p.cpp  qgvariantutils_p.h  qtgsettingsglobal.h  utils.cpp  utils_p.cpp  utils_p.h
src/imports/: imports.pro  imports.qbs
src/imports/gsettings/: CMakeLists.txt  gsettings.pro  gsettings.qbs  plugin.cpp  plugins.qmltypes  qmldir  qmlgsettings.cpp  qmlgsettings.h  qmlgsettingsschema.cpp  qmlgsettingsschema.h
src/imports/settings/: CMakeLists.txt  plugin.cpp  plugins.qmltypes  qmldir  qmlgsettings.cpp  qmlgsettings.h  qmlgsettingsschema.cpp  qmlgsettingsschema.h
src/settings/: CMakeLists.txt  HawaiiConfig.cmake.in  logging.h  qgsettings.cpp  qgsettings.h  qgvariantutils.cpp  qgvariantutils.h  utils.cpp  utils.h
tests/auto/: auto.pro  auto.qbs
tests/auto/data/: gschemas.compiled  io.liri.gsettings.test.gschema.xml
tests/auto/gsettings/: CMakeLists.txt  gsettings.pro  gsettings.qbs  tst_qgsettings.cpp
tests/auto/qmlgsettings/: CMakeLists.txt  qmlgsettings.pro  qmlgsettings.qbs  tst_qmlgsettings.cpp  tst_qmlgsettings.qml
tests/auto/settings/: CMakeLists.txt  tst_qgsettings.cpp  tst_qmlgsettings.cpp  tst_qmlgsettings.qml
tests/auto/settings/data/: gschemas.compiled  org.hawaiios.gsettings.test.gschema.xml
